--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>My hobbies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -29,7 +29,7 @@
 
             This level is closest to that of the computer itself, namely the “base level.” Each line of code corresponds to a single action of the computer system.
 
-            Machine language, which consists of strings of 0 and 1 bits, is the compu­ter’s “native tongue”. Every computer has its own native machine lan­guage. For people actually write programs in machine language anymore, but all programs written in higher-level languages eventually must be trans­lated into machine language to be executed. </h4>
+            Machine language, which consists of strings of 0 and 1 bits, is the computer’s “native tongue”. Every computer has its own native machine language. For people actually write programs in machine language anymore, but all programs written in higher-level languages eventually must be translated into machine language to be executed. </h4>
 
     </section>
     <section id="badminton">
@@ -80,16 +80,16 @@
         <h1>About us</h1>
         <br>
         <br>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d471220.56305731717!2d88.0495333407064!3d22.67575208848934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f882db4908f667%3A0x43e330e68f6c2cbc!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1624431977801!5m2!1sen!2sin" width="2000" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d471220.56305731717!2d88.0495333407064!3d22.67575208848934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f882db4908f667%3A0x43e330e68f6c2cbc!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1624431977801!5m2!1sen!2sin" width="900" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <div class="contact_1"><a href="mailto:example@gmail.com?Subject=Hello"><i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>example@gmail.com</h3></a><br><br>
             <a href="#"><i class="fa fa-instagram"></i>&nbsp;&nbsp;<h3>My instagram id</h3></a>
 
     </section>
-</body>
+
 <section id="videos">
     <h1>Here are some videos on badminton!</h1>
     <img src="https://images.unsplash.com/photo-1617696618050-b0fef0c666af?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYyNDQzMzM0Ng&ixlib=rb-1.2.1&q=85">
     <br>
     <br>
     <iframe width="956" height="538" src="https://www.youtube.com/embed/n20IQaOMLZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section></html>
+        </section></body></html>
